2009-02-18 David Moore  <dcm@acm.org>
	* SVN 587: Juju: Fix missing frames when host controller is OHCI 1.0
	           and packets-per-frame is not a multiple of 8.

2009-02-09 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 586: Apply a patch from Damien Dusha that adds proper memory
	           allocation verifications in AdaptBuffer functions.
	
2009-01-29 David Moore  <dcm@acm.org>
	* SVN 585: Update version and AUTHORS for 2.1.0.  RELEASE 2.1.0.

2009-01-26 David Moore  <dcm@acm.org>
	* SVN 584: Remove private includes from dc1394/linux/capture.h

2009-01-13 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 583: - fix allocation errors in conversions.c and bayer.c
	           - fix bayer conversion problem with cameras sending
	             16bit RAW over MONO16 format.
	           Both fixes thanks to Damien Dusha.
	
2009-01-12 David Moore  <dcm@acm.org>
	* SVN 582: Add missing libusb_set_configuration() and
	           libusb_release_interface() calls to usb backend.

2009-01-05 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 581: configure.in: add quotes around args that use
	           $LIBUSB_LIBS as there may be more than one lib (which
	           leads to a "too many arguments" error)

2009-01-04 David Moore  <dcm@acm.org>
	* SVN 580: Include pkgconfig macros in acinclude.m4 for the benefit
	           of SVN users that don't have pkgconfig installed.
	* SVN 579: Don't let configure fail if libusb-1.0 is not present

2009-01-02 David Moore  <dcm@acm.org>
	* SVN 578: Add the "usb" platform, for support of devices that do
	           IIDC-over-USB such as the Point Grey Chameleon and
	           Firefly MV cameras.  Support will be automatically
	           enabled if libusb 1.0 is found at configure-time.

2008-12-30 David Moore  <dcm@acm.org>
	* SVN 577: Juju: Retry busy transactions

2008-12-23 David Moore  <dcm@acm.org>
	* SVN 576: Fix Mac OS build.
	* SVN 575: Improve Mac OS error message when iso bandwidth is depleted.