@@ -1,6 +1,10 @@
 # process this file with automake to create a Makefile.in
 
-SUBDIRS = dc1394 examples
+SUBDIRS = dc1394
+if MAKE_EXAMPLES
+SUBDIRS += examples
+endif
+
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure config.h.in \
 	stamp-h.in
 EXTRA_DIST = libdc1394-2.pc.in Doxyfile.in
